<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonCat1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/peguntas_de_cat_1" />

    <Button
        android:id="@+id/exameCat1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="exame de Cat 1" />

    <Button
        android:id="@+id/buttonCat2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/peguntas_de_cat_2" />

    <Button
        android:id="@+id/exameCat2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/exame_de_cat_2" />

    <Button
        android:id="@+id/buttonCat3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/peguntas_de_cat_3" />

    <Button
        android:id="@+id/exameCat3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/exame_de_cat_3" />


    <TextView
        android:id="@+id/websiteLinkTextView"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"

        android:clickable="true"
        android:gravity="center"
        android:text="@string/visite_o_noso_website"
        android:textColor="@color/linkColor"
        android:textSize="16sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/telegramLinkTextView"
        android:layout_marginBottom="8dp"

        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/junte_se_ao_telegram"
        android:textColor="@color/linkColor"
        android:textSize="16sp" />


</LinearLayout>
